@@ -4516,118 +4516,6 @@ argument_list|()
 expr_stmt|;
 try|try
 block|{
-if|if
-condition|(
-name|writeToWAL
-condition|)
-block|{
-comment|//
-comment|// write/sync to WAL should happen before we touch memstore.
-comment|//
-comment|// If order is reversed, i.e. we write to memstore first, and
-comment|// for some reason fail to write/sync to commit log, the memstore
-comment|// will contain uncommitted transactions.
-comment|//
-comment|// bunch up all edits across all column families into a
-comment|// single WALEdit.
-name|WALEdit
-name|walEdit
-init|=
-operator|new
-name|WALEdit
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|Map
-operator|.
-name|Entry
-argument_list|<
-name|byte
-index|[]
-argument_list|,
-name|List
-argument_list|<
-name|KeyValue
-argument_list|>
-argument_list|>
-name|e
-range|:
-name|familyMap
-operator|.
-name|entrySet
-argument_list|()
-control|)
-block|{
-name|List
-argument_list|<
-name|KeyValue
-argument_list|>
-name|kvs
-init|=
-name|e
-operator|.
-name|getValue
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|KeyValue
-name|kv
-range|:
-name|kvs
-control|)
-block|{
-name|walEdit
-operator|.
-name|add
-argument_list|(
-name|kv
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-comment|// append the edit to WAL. The append also does the sync.
-if|if
-condition|(
-operator|!
-name|walEdit
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-name|this
-operator|.
-name|log
-operator|.
-name|append
-argument_list|(
-name|regionInfo
-argument_list|,
-name|regionInfo
-operator|.
-name|getTableDesc
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|walEdit
-argument_list|,
-name|now
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-name|long
-name|size
-init|=
-literal|0
-decl_stmt|;
-comment|//
-comment|// Now make changes to the memstore.
-comment|//
 for|for
 control|(
 name|Map
@@ -4870,6 +4758,178 @@ name|byteNow
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+block|}
+if|if
+condition|(
+name|writeToWAL
+condition|)
+block|{
+comment|//
+comment|// write/sync to WAL should happen before we touch memstore.
+comment|//
+comment|// If order is reversed, i.e. we write to memstore first, and
+comment|// for some reason fail to write/sync to commit log, the memstore
+comment|// will contain uncommitted transactions.
+comment|//
+comment|// bunch up all edits across all column families into a
+comment|// single WALEdit.
+name|WALEdit
+name|walEdit
+init|=
+operator|new
+name|WALEdit
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|byte
+index|[]
+argument_list|,
+name|List
+argument_list|<
+name|KeyValue
+argument_list|>
+argument_list|>
+name|e
+range|:
+name|familyMap
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|List
+argument_list|<
+name|KeyValue
+argument_list|>
+name|kvs
+init|=
+name|e
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|KeyValue
+name|kv
+range|:
+name|kvs
+control|)
+block|{
+name|walEdit
+operator|.
+name|add
+argument_list|(
+name|kv
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|// append the edit to WAL. The append also does the sync.
+if|if
+condition|(
+operator|!
+name|walEdit
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|this
+operator|.
+name|log
+operator|.
+name|append
+argument_list|(
+name|regionInfo
+argument_list|,
+name|regionInfo
+operator|.
+name|getTableDesc
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|walEdit
+argument_list|,
+name|now
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|long
+name|size
+init|=
+literal|0
+decl_stmt|;
+comment|//
+comment|// Now make changes to the memstore.
+comment|//
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|byte
+index|[]
+argument_list|,
+name|List
+argument_list|<
+name|KeyValue
+argument_list|>
+argument_list|>
+name|e
+range|:
+name|familyMap
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|byte
+index|[]
+name|family
+init|=
+name|e
+operator|.
+name|getKey
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|KeyValue
+argument_list|>
+name|kvs
+init|=
+name|e
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+name|Store
+name|store
+init|=
+name|getStore
+argument_list|(
+name|family
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|KeyValue
+name|kv
+range|:
+name|kvs
+control|)
+block|{
 name|size
 operator|=
 name|this
